# jg-demo

./: .gitignore  .gitmodules  README.md
graph-notebook/: README.md
graph-notebook/notebooks/TIMS demos/: Untitled.ipynb
graph-notebook/notebooks/starter/01-Getting-Started/: 02-Using-Gremlin-to-Access-the-Graph.ipynb
java-example/: pom.xml
java-example/src/main/java/com/essaid/tims/client/: ExampleClient.java
js-example/: package-lock.json  package.json
js-example/src/: index.js
python-example/: pyproject.toml
python-example/src/example/: run.py
tims-instance/: .gitignore  pom.xml
